--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -89,6 +89,12 @@
     <Compile Include="forms\mokkimuokkaus.Designer.cs">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\Testilomake.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Testilomake.Designer.cs">
+      <DependentUpon>Testilomake.cs</DependentUpon>
+    </Compile>
     <Compile Include="objs\DBHandler.cs" />
     <Compile Include="objs\dbitems\Asiakas.cs" />
     <Compile Include="objs\dbitems\Lasku.cs" />
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkitiedot.resx">
       <DependentUpon>mokkitiedot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Testilomake.resx">
+      <DependentUpon>Testilomake.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Primary.resx">
       <DependentUpon>Primary.cs</DependentUpon>
@@ -138,7 +147,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="alustus.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
