--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -77,6 +77,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="forms\Asiakastiedot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Asiakastiedot.Designer.cs">
+      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\mokkitiedot.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="forms\Asiakastiedot.resx">
+      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkimuokkaus.resx">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
     </EmbeddedResource>
