Mökit kohtaan lisätty lisää-, muokkaa-, poista- ja mökin tiedot ja palvelut- napit. Lisää napi aukaisee mokkimuokkaus formin. Muokkaa nappi aukaisee saman formin myös. Poista nappi aukaisee tekemäni varmennus_kysely_poistosta formin, jossa peruuta- ja kyllä-napit. Peruuta- nappi sulkee messageboxin. Mökin tiedot ja palvelut-nappi aukaisee mokkitiedot formin.

--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -89,6 +89,12 @@
     <Compile Include="forms\mokkimuokkaus.Designer.cs">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\varmennus_kysely_poistosta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\varmennus_kysely_poistosta.Designer.cs">
+      <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
+    </Compile>
     <Compile Include="objs\DBHandler.cs" />
     <Compile Include="objs\dbitems\Asiakas.cs" />
     <Compile Include="objs\dbitems\Lasku.cs" />
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkitiedot.resx">
       <DependentUpon>mokkitiedot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\varmennus_kysely_poistosta.resx">
+      <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Primary.resx">
       <DependentUpon>Primary.cs</DependentUpon>
