--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -101,6 +101,10 @@
     <Compile Include="forms\mokkimuokkaus.Designer.cs">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\varmennus_kysely_poistosta.cs" />
+    <Compile Include="forms\varmennus_kysely_poistosta.Designer.cs">
+      <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\Varauksenlisays.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkitiedot.resx">
       <DependentUpon>mokkitiedot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\varmennus_kysely_poistosta.resx">
+      <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Varauksenlisays.resx">
       <DependentUpon>Varauksenlisays.cs</DependentUpon>
