--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -101,6 +101,12 @@
     <Compile Include="forms\mokkimuokkaus.Designer.cs">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\Palvelunmuokkaus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Palvelunmuokkaus.Designer.cs">
+      <DependentUpon>Palvelunmuokkaus.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\varmennus_kysely_poistosta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -158,6 +164,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkitiedot.resx">
       <DependentUpon>mokkitiedot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Palvelunmuokkaus.resx">
+      <DependentUpon>Palvelunmuokkaus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\varmennus_kysely_poistosta.resx">
       <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
