--- a/MOVA2020/MOVA2020.csproj
+++ b/MOVA2020/MOVA2020.csproj
@@ -77,17 +77,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="forms\Asiakastiedot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Asiakastiedot.Designer.cs">
+      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\Laskutus.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="forms\Laskutus.Designer.cs">
       <DependentUpon>Laskutus.cs</DependentUpon>
     </Compile>
-    <Compile Include="forms\Asiakastiedot.cs">
+    <Compile Include="forms\Asiakasmuokkaus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="forms\Asiakastiedot.Designer.cs">
-      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    <Compile Include="forms\Asiakasmuokkaus.Designer.cs">
+      <DependentUpon>Asiakasmuokkaus.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\mokkitiedot.cs">
       <SubType>Form</SubType>
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="forms\Palvelunmuokkaus.Designer.cs">
       <DependentUpon>Palvelunmuokkaus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Varauksentiedot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Varauksentiedot.Designer.cs">
+      <DependentUpon>Varauksentiedot.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\varmennus_kysely_poistosta.cs">
       <SubType>Form</SubType>
@@ -153,11 +165,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="forms\Asiakastiedot.resx">
+      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\Laskutus.resx">
       <DependentUpon>Laskutus.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="forms\Asiakastiedot.resx">
-      <DependentUpon>Asiakastiedot.cs</DependentUpon>
+    <EmbeddedResource Include="forms\Asiakasmuokkaus.resx">
+      <DependentUpon>Asiakasmuokkaus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\mokkimuokkaus.resx">
       <DependentUpon>mokkimuokkaus.cs</DependentUpon>
@@ -167,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Palvelunmuokkaus.resx">
       <DependentUpon>Palvelunmuokkaus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Varauksentiedot.resx">
+      <DependentUpon>Varauksentiedot.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\varmennus_kysely_poistosta.resx">
       <DependentUpon>varmennus_kysely_poistosta.cs</DependentUpon>
